--- a/tools/mdtcablelist/src/mdtClUnitLinkDialog.ui
+++ b/tools/mdtcablelist/src/mdtClUnitLinkDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>797</width>
-    <height>467</height>
+    <height>534</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,62 +15,113 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
-    <layout class="QFormLayout" name="formLayout_3">
-     <item row="0" column="0">
-      <widget class="QLabel" name="lbLinkType">
-       <property name="text">
-        <string>Link type</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QComboBox" name="cbLinkType"/>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="lbLinkDirection">
-       <property name="text">
-        <string>Direction</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_3">
-       <item>
-        <widget class="QComboBox" name="cbLinkDirection"/>
-       </item>
-       <item>
-        <widget class="QLabel" name="lbLinkDirectionAsciiPicture">
+    <layout class="QHBoxLayout" name="horizontalLayout_10">
+     <item>
+      <layout class="QFormLayout" name="formLayout_6">
+       <item row="0" column="0">
+        <widget class="QLabel" name="lbIdentification">
          <property name="text">
-          <string>----</string>
+          <string>Identification</string>
          </property>
         </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="leIdentification"/>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="lbModification">
+         <property name="text">
+          <string>Modification</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="cbModification"/>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="lbSinceVersion">
+         <property name="text">
+          <string>Since version</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QComboBox" name="cbSinceVersion"/>
        </item>
       </layout>
      </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="lbValue">
-       <property name="text">
-        <string>Value</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QDoubleSpinBox" name="sbValue">
-         <property name="maximum">
-          <double>9999999.000000000000000</double>
+     <item>
+      <layout class="QFormLayout" name="formLayout_3">
+       <item row="0" column="0">
+        <widget class="QLabel" name="lbLinkType">
+         <property name="text">
+          <string>Link type</string>
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QLabel" name="lbUnit">
+       <item row="0" column="1">
+        <widget class="QComboBox" name="cbLinkType"/>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="lbLinkDirection">
          <property name="text">
-          <string>Unit</string>
+          <string>Direction</string>
          </property>
         </widget>
+       </item>
+       <item row="1" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <widget class="QComboBox" name="cbLinkDirection"/>
+         </item>
+         <item>
+          <widget class="QLabel" name="lbLinkDirectionAsciiPicture">
+           <property name="text">
+            <string>----</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="lbValue">
+         <property name="text">
+          <string>Value</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QDoubleSpinBox" name="sbValue">
+           <property name="maximum">
+            <double>9999999.000000000000000</double>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="lbUnit">
+           <property name="text">
+            <string>Unit</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_5">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
@@ -242,6 +293,15 @@ p, li { white-space: pre-wrap; }
               <width>0</width>
               <height>80</height>
              </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
+            <property name="editTriggers">
+             <set>QAbstractItemView::NoEditTriggers</set>
+            </property>
+            <property name="tabKeyNavigation">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -424,6 +484,15 @@ p, li { white-space: pre-wrap; }
               <height>80</height>
              </size>
             </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
+            <property name="editTriggers">
+             <set>QAbstractItemView::NoEditTriggers</set>
+            </property>
+            <property name="tabKeyNavigation">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
           <item>
@@ -461,8 +530,8 @@ p, li { white-space: pre-wrap; }
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
+     <x>252</x>
+     <y>529</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -477,8 +546,8 @@ p, li { white-space: pre-wrap; }
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
+     <x>320</x>
+     <y>529</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
