--- a/src/mdtutilsgui/mdtFieldMapItemDialog.ui
+++ b/src/mdtutilsgui/mdtFieldMapItemDialog.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
       <layout class="QFormLayout" name="formLayout_3">
        <item row="0" column="0">
@@ -74,7 +74,18 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QComboBox" name="cbDestinationField"/>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QComboBox" name="cbDestinationField"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pbEditDestinationFieldList">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="lbDestinationFieldNameLabel">
@@ -166,13 +177,6 @@
            </widget>
           </item>
          </layout>
-        </item>
-        <item>
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>TextLabel</string>
-          </property>
-         </widget>
         </item>
        </layout>
       </widget>
