--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitConnectionDialog.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitConnectionDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>604</width>
-    <height>369</height>
+    <width>650</width>
+    <height>447</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,6 +16,9 @@
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <layout class="QFormLayout" name="formLayout">
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="lbArticleIoTypeLabel">
        <property name="text">
@@ -165,7 +168,7 @@
        </item>
       </layout>
      </item>
-     <item row="5" column="0">
+     <item row="6" column="0">
       <widget class="QLabel" name="lbFunctionEN">
        <property name="text">
         <string>Function ENG :</string>
@@ -175,7 +178,7 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="1">
+     <item row="6" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QLineEdit" name="leFunctionEN"/>
@@ -196,7 +199,7 @@
        </item>
       </layout>
      </item>
-     <item row="6" column="0">
+     <item row="7" column="0">
       <widget class="QLabel" name="lbFunctionFR">
        <property name="text">
         <string>Function FRA :</string>
@@ -206,7 +209,7 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
+     <item row="7" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
         <widget class="QLineEdit" name="leFunctionFR"/>
@@ -227,7 +230,7 @@
        </item>
       </layout>
      </item>
-     <item row="7" column="0">
+     <item row="8" column="0">
       <widget class="QLabel" name="lbFunctionDE">
        <property name="text">
         <string>Function DEU :</string>
@@ -237,7 +240,7 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
+     <item row="8" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
         <widget class="QLineEdit" name="leFunctionDE"/>
@@ -258,7 +261,7 @@
        </item>
       </layout>
      </item>
-     <item row="8" column="0">
+     <item row="9" column="0">
       <widget class="QLabel" name="lbFunctionIT">
        <property name="text">
         <string>Function ITA :</string>
@@ -268,7 +271,7 @@
        </property>
       </widget>
      </item>
-     <item row="8" column="1">
+     <item row="9" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_6">
        <item>
         <widget class="QLineEdit" name="leFunctionIT"/>
@@ -289,7 +292,7 @@
        </item>
       </layout>
      </item>
-     <item row="9" column="0">
+     <item row="10" column="0">
       <widget class="QLabel" name="lbSignalName">
        <property name="text">
         <string>Signal name :</string>
@@ -299,7 +302,7 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="1">
+     <item row="10" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_8">
        <item>
         <widget class="QLineEdit" name="leSignalName"/>
@@ -319,14 +322,14 @@
        </item>
       </layout>
      </item>
-     <item row="10" column="0">
+     <item row="11" column="0">
       <widget class="QLabel" name="lbSwAddress">
        <property name="text">
         <string>SW address :</string>
        </property>
       </widget>
      </item>
-     <item row="10" column="1">
+     <item row="11" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_9">
        <item>
         <widget class="QSpinBox" name="sbSwAddress">
@@ -349,6 +352,41 @@
         </spacer>
        </item>
       </layout>
+     </item>
+     <item row="5" column="1">
+      <widget class="QDoubleSpinBox" name="sbConnectionResistance">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="specialValueText">
+        <string>Null</string>
+       </property>
+       <property name="suffix">
+        <string> [Ohm]</string>
+       </property>
+       <property name="decimals">
+        <number>3</number>
+       </property>
+       <property name="minimum">
+        <double>-0.010000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>10.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.010000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="lbConnectionResistance">
+       <property name="text">
+        <string>Connection resistance:</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
@@ -420,6 +458,31 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>leSchemaPage</tabstop>
+  <tabstop>pbSelectUnitConnector</tabstop>
+  <tabstop>pbSetNoConnector</tabstop>
+  <tabstop>cbConnectionType</tabstop>
+  <tabstop>leUnitContactName</tabstop>
+  <tabstop>pbCopyContactName</tabstop>
+  <tabstop>pbSelectContact</tabstop>
+  <tabstop>sbConnectionResistance</tabstop>
+  <tabstop>leFunctionEN</tabstop>
+  <tabstop>pbCopyFunctionEN</tabstop>
+  <tabstop>leFunctionFR</tabstop>
+  <tabstop>pbCopyFunctionFR</tabstop>
+  <tabstop>leFunctionDE</tabstop>
+  <tabstop>pbCopyFunctionDE</tabstop>
+  <tabstop>leFunctionIT</tabstop>
+  <tabstop>pbCopyFunctionIT</tabstop>
+  <tabstop>leSignalName</tabstop>
+  <tabstop>sbSwAddress</tabstop>
+  <tabstop>tableView</tabstop>
+  <tabstop>pbAddRange</tabstop>
+  <tabstop>pbEditRange</tabstop>
+  <tabstop>pbRemoveRange</tabstop>
+  <tabstop>buttonBox</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
