--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitLinkDialog.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitLinkDialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>797</width>
+    <width>810</width>
     <height>534</height>
    </rect>
   </property>
@@ -98,8 +98,14 @@
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
           <widget class="QDoubleSpinBox" name="sbValue">
+           <property name="decimals">
+            <number>3</number>
+           </property>
            <property name="maximum">
             <double>9999999.000000000000000</double>
+           </property>
+           <property name="singleStep">
+            <double>0.010000000000000</double>
            </property>
           </widget>
          </item>
